<resources>
    <string name="app_name">PoojaVaghelaApp</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="failed_to_start_recording">Failed to start recording: %1$s</string>
    <string name="start_recording">Start Recording</string>
    <string name="recording_stopped">Recording stopped</string>
    <string name="schedule_saved_successfully">Schedule saved successfully</string>
    <string name="play_audio">Play Audio</string>
    <string name="stop_audio">Stop Audio</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="dark_mode_schedule">Dark Mode Schedule</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="save_schedule">Save Schedule</string>
</resources>